--- a/Maket1/style.css
+++ b/Maket1/style.css
@@ -18,3 +18,44 @@ p{
   font-size: 14px;
   line-height: 20px;
 }
+
+.Header {
+  width: 1440px;
+  height: 793px;
+  background-image: url(/assets/photo/background.png);
+  background-repeat: no-repeat;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+div.links {
+  margin-top: 30px;
+  gap: 21px;
+}
+
+.brand {
+  margin-left: 195px;
+  margin-top: 30px;
+}
+
+.card-prfile {
+  width: 150px;
+  margin: auto;
+}
+
+.stars {
+  margin: auto;
+}
+
+.gaps {
+  gap: 45px;
+}
+
+.card {
+  width: 297px;
+  height: 376px;
+  border: 1px solid #dedede;
+}
